# rvv-prototype

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assembler/: Cargo.toml
assembler/src/: lib.rs  v_encoder.rs
bn128-example/: Cargo.toml  Makefile  README.md
bn128-example/examples/: ut.rs
bn128-example/src/: arith.rs  ethereum.rs  lib.rs  main.rs  rvv_impl.rs
bn128-example/src/fields/: fp.rs  fq12.rs  fq2.rs  fq6.rs  mod.rs
bn128-example/src/groups/: mod.rs
bn128-example/src/rvv_crypto/: casts.rs  constants.rs  cross_tests.rs  curve.rs  ethereum_tests.rs  gfp.rs  gfp12.rs  gfp2.rs  gfp6.rs  macros.rs  miller.rs  mod.rs  twist.rs
example/: Cargo.toml
example/src/: main.rs
hacspec/: Cargo.toml
hacspec/src/: ast.rs
mont-example/: Cargo.toml  Makefile  README.md
mont-example/src/: lib.rs  main.rs  mont.rs  rsa.rs  signed_integer.rs  uint_version.rs
rvv/: Cargo.toml  README.md
rvv-simulator-runtime/: Cargo.toml  README.md  run-tests.sh
rvv-simulator-runtime/src/: lib.rs  uint.rs
rvv-simulator-runtime/tests/: uint_tests.rs
rvv-tests/: Cargo.toml  Makefile
rvv-tests/src/: cases.rs  example.s  lib.rs  main.rs
rvv/src/: ast.rs  ast_transform.rs  code_gen.rs  hacspec.rs  lib.rs  syn_to_hacspec.rs  type_checker.rs
rvv/src/code_gen/: asm.rs  mod.rs  simulator.rs
rvv/src/tests/: code_gen.rs  code_gen_mixed.rs  code_gen_partial.rs  mod.rs
