[workspace]

[package]
name = "alt-bn128-example"
version = "0.1.0"
edition = "2018"
description = "Pairing cryptography with the Barreto-Naehrig curve"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
use_rvv_vector = []
use_rvv_asm = []
run_all_cases = []
simulator = ["rvv/simulator"]

# this configuration is very important to CKB-VM
[profile.release]
# lto = "fat"
debug = true


[dependencies]
byteorder = { version = "1.0", features = ["i128"], default-features = false }
crunchy = "0.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
#uint = { version = "0.9.1", default-features = false }
rvv = { path = "../rvv" }
ckb-std = "0.9.0"
rvv-simulator-runtime = { path = "../rvv-simulator-runtime" }
rvv-asm = "0.1.11"



[[bin]]
path = "src/main.rs"
name = "alt-bn128-example-simulator"
required-features = ["simulator", "use_rvv_vector"]

[[bin]]
path = "src/main.rs"
name = "alt-bn128-example-rvv-vector"
required-features = ["use_rvv_vector"]

[[bin]]
path = "src/main.rs"
name = "alt-bn128-example-rvv-vector-bench"
required-features = ["use_rvv_vector", "run_all_cases"]

[[bin]]
path = "src/main.rs"
name = "alt-bn128-example-rvv-asm"
required-features = ["use_rvv_asm"]

[[bin]]
path = "src/main.rs"
name = "alt-bn128-example-rvv-asm-bench"
required-features = ["use_rvv_asm", "run_all_cases"]


[[bin]]
path = "src/main.rs"
name = "alt-bn128-example-riscv-raw"
required-features = []

[[bin]]
path = "src/main.rs"
name = "alt-bn128-example-riscv-raw-bench"
required-features = ["run_all_cases"]


[[bin]]
path = "src/bin/alt-bn128-example-x86-raw.rs"
name = "alt-bn128-example-x86-raw"
required-features = []

