[package]
name = "hacspec"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.0.0"
itertools = "0.10.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
serde = { version = "1.0.125", features = ["derive"] }