[workspace]

[package]
name = "rvv-mont-example"
version = "0.1.0"
edition = "2018"

# this configuration is very important to CKB-VM
[profile.release]
lto = "fat"

[dependencies]
rvv = { path = "../rvv" }
ckb-std = "0.9.0"
rvv-simulator-runtime = { path = "../rvv-simulator-runtime" }

[features]
default = ["use_rvv_vector"]
use_rvv_vector = []
simulator = ["rvv/simulator"]
