[workspace]

[package]
name = "rvv-mont-example"
version = "0.1.0"
edition = "2018"

# this configuration is very important to CKB-VM
[profile.release]
lto = "fat"

[dependencies]
rvv = { path = "../rvv" }
ckb-std = "0.9.0"
rvv-asm = "0.1.8"
rvv-simulator-runtime = { path = "../rvv-simulator-runtime" }

[[bin]]
path = "src/main.rs"
name = "mont-example-simulator"
required-features = ["simulator", "use_rvv_vector"]

[[bin]]
path = "src/main.rs"
name = "mont-example-rvv-vector"
required-features = ["use_rvv_vector"]

[[bin]]
path = "src/main.rs"
name = "mont-example-rvv-asm"
required-features = ["use_rvv_asm"]

[[bin]]
path = "src/main.rs"
name = "mont-example-raw"
required-features = []


[features]
default = []
use_rvv_vector = []
use_rvv_asm = []
simulator = ["rvv/simulator"]
