[package]
name = "rvv"
version = "0.1.0"
edition = "2018"

[dependencies]
syn = { version = "1.0.80", features = ["extra-traits", "full", "fold", "printing"] }
quote = "1.0.9"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
rvv-assembler = { path = "../assembler" }
im = "15.0.0"
itertools = "0.10.0"
serde = { version = "1.0.125", features = ["derive"] }

[lib]
proc-macro = true

[features]
default = []
simulator = ["rvv-assembler/simulator"]