[package]
name = "rvv"
version = "0.1.0"
edition = "2018"

[dependencies]
syn = { version = "1.0.80", features = ["extra-traits", "full", "fold", "printing"] }
quote = "1.0.9"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
rvv-assembler = { path = "../assembler" }
hacspec = { path = "../hacspec" }
anyhow = "1.0.44"

[lib]
proc-macro = true

[features]
default = []
simulator = ["rvv-assembler/simulator"]